public class ProductoDigital {
    private double tamannoDescarga;
    private String licencia;
    private double iva;
    private double descuento;
    public void ProductoDigital(String nombre, double precio, double tamannoDescarga, String licencia) {
        // TODO: Implementar el método
    }
    public double calcularPrecioFinal() {
        // TODO: Implementar el método
    }
}
